RecyclerView added and parse JSON to Movie object. OnClickItem implemented.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">PopularMovies</string>
+    <string name="content_description_movie_poster">Movie Poster</string>
 </resources>
