--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="top_rated">Top Rated</string>
     <string name="popular">Popular</string>
     <string name="sort">Sort</string>
+    <string name="try_again">Something wrong happened. Please, try again!</string>
+    <string name="internet_off">No Internet Connection!</string>
 </resources>
