--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="popular">Popular</string>
     <string name="sort">Sort</string>
     <string name="try_again">Something wrong happened. Please, try again!</string>
+    <string name="permissions">Please, accept the permission request so that app works fine.</string>
     <string name="internet_off">No Internet Connection!</string>
 </resources>
