--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="try_again">Something wrong happened. Please, try again!</string>
     <string name="permissions">Please, accept the permission request so that app works fine.</string>
     <string name="internet_off">No Internet Connection!</string>
+    <string name="content_authority">com.android.udacity.popularmovies.provider</string>
 </resources>
