Feature: Create favorite view menu option & change for startActivityForResult between MoviesActivity and MoviesDetailActivity to check if favorite has been changed and notify the view.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="content_description_movie_poster">Movie Poster</string>
     <string name="top_rated">Top Rated</string>
     <string name="popular">Popular</string>
+    <string name="favorite">Favorite</string>
     <string name="sort">Sort</string>
     <string name="try_again">Something wrong happened. Please, try again!</string>
     <string name="permissions">Please, accept the permission request so that app works fine.</string>
